--- a/css/index.css
+++ b/css/index.css
@@ -3,14 +3,11 @@
 * @Description: Unique and Very Responsive Admin Dashboard UI
 */
 @import 'external/bootstrap.css';
+@import 'variables.css';
 @import 'animations.css';
 @import 'colors.css';
 @import 'sizes.css';
 @import 'app.css';
-:root {
-  --font-size: 0.85rem;
-}
-
 body {
   font-family: "AppContent", "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   background-color: var(--background-color, --default-c, --white);
@@ -20,11 +17,6 @@ body {
 }
 
 /* Mobile --> BELOW */
-@media (max-width: 575.98px) {
-  :root {
-    --font-size: calc(var(--font-size)/1.25);
-  }
-}
 @font-face {
   font-family: "AppTitle";
   src: url("/fonts/NotoSans-Bold.ttf");
