--- a/css/menu.css
+++ b/css/menu.css
@@ -122,6 +122,7 @@
   opacity: 0.125;
 }
 .sidemenu .nav-menu .nav-item .label {
+  overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
 }
@@ -157,7 +158,7 @@
   flex: 1 1 100%;
   transition: width 0.5s;
   overflow: hidden;
-  z-index: 0;
+  z-index: 1;
 }
 .page footer {
   background-color: var(--secondary);
