--- a/styles/helper/primefaces.scss
+++ b/styles/helper/primefaces.scss
@@ -2,6 +2,7 @@
 
 .p-component {
   font-size: unset !important;
+  font-family: unset;
 }
 
 .p-steps {
@@ -35,6 +36,10 @@
   max-height: 95%;
   z-index: 1 !important;
 
+  .p-confirm-dialog .p-confirm-dialog-icon {
+    font-size: 300%;
+  }
+
   .p-dialog-header {
     .p-dialog-header-close:hover {
       color: var(--danger) !important;
@@ -50,6 +55,7 @@
     flex-wrap: wrap;
     justify-content: flex-end;
     padding: 1.5rem;
+    gap: 0.5rem;
 
     button {
       border: none;
@@ -70,8 +76,12 @@
   }
 }
 
+.p-overlaypanel {
+  z-index: 1 !important;
+}
+
 .p-toast {
-  z-index: 4 !important;
+  z-index: 5 !important;
 }
 
 .input>.p-inputtext {
@@ -215,7 +225,10 @@ p-chart {
 }
 
 .p-button {
-  background-color: var(--primary);
+  font-size: 120%;
+  border-color: unset !important;
+  background-color: unset;
+  // background-color: var(--primary);
 
   &:hover {
     background-color: hsl(var(--primary-hs), calc(var(--primary-l) - 20%));
