--- a/styles/index.scss
+++ b/styles/index.scss
@@ -9,6 +9,7 @@
 @import 'colors.css';
 @import 'sizes.css';
 @import 'app.css';
+@import 'polyfills.css';
 
 body {
   font-family: 'AppContent', 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
