--- a/css/colors.css
+++ b/css/colors.css
@@ -5,7 +5,7 @@
 * {color}-hs = The Hue and Saturation level of the color.
 * {color}-l = Lightness level of the color.
 * {color}-a = Alpha level of the color.
-* {color}-c = The corresponing Text color of the color, if it is used as a background.
+* {color}-c = The corresponding Text color of the color, if it is used as a background.
 */
 .text-default {
   color: var(--default, #5B5B5B) !important;
@@ -6785,6 +6785,9 @@ input:focus {
   left: 0;
   z-index: 0;
 }
+.is-blur::before:not(img) {
+  content: "";
+}
 .is-blur::before {
   backdrop-filter: blur(10px);
 }
@@ -6821,6 +6824,9 @@ input:focus {
   top: 0;
   left: 0;
   z-index: 0;
+}
+[class*=shadow-]::before:not(img) {
+  content: "";
 }
 
 input,
