--- a/styles/colors.scss
+++ b/styles/colors.scss
@@ -7,13 +7,14 @@
 * {color}-hs = The Hue and Saturation level of the color.
 * {color}-l = Lightness level of the color.
 * {color}-a = Alpha level of the color.
-* {color}-c = The corresponing Text color of the color, if it is used as a background.
+* {color}-c = The corresponding Text color of the color, if it is used as a background.
 */
 
 @each $k,
 $v in $app-colors-mapped {
   // Texts
   @include mapped-color-variant('.text-#{$k}', $k, $v);
+  // @include mapped-color-variant('.border-#{$k}', $k, $v);
   // Background
   @include mapped-bg-color-variant('.bg-#{$k}', $k, $v);
   @include mapped-g-color-variant('.bg-g-#{$k}', $k, $v);
